Fixed spacing on footer mady by message (#39)

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -65,6 +65,10 @@ p, ul, ol, li, td, a{
     text-align: center;
 }
 
+.spotifyOpenSource span {
+  color: red;
+}
+
 /* controls */
 a.button {
   background-color: $primaryColor;
